gitops/kustomize/coinvault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coinvault
  labels:
    app.kubernetes.io/name: coinvault
